--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
         </section>
         <section class="links">
           <ul>
-            
+            <a href="http://43.132.253.84:6002/" rel="noreferrer" target="_blank">
+              <li>
+                <span class="icon"> <img src="./public/video.svg" /> </span
+                ><span>Demo</span>
+              </li>
+            </a>
           </ul>
         </section>
         <a class="anchor" id="abstract-a"></a>
