--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
             </div>
         </div>
     </section>
+    <div class="columns is-centered has-text-centered">
+        <div class="column">
+            <p style="font-size: 125%">
+                <i>We provide a test account for the demo. <strong>Username: test Password: test</strong></i>
+            </p>
+        </div>
+    </div>
+
 
 <!--    <section class="section" style="padding: 0">-->
 <!--        <div class="container is-max-desktop">-->
@@ -660,6 +668,43 @@ RLHF training are able to follow the abstraction metrics well.
                 <div class="rows is-centered ">
                     <div class="row is-full-width">
                         <h2 class="title is-3"><span class="dvima">Visualization of the Platform</span></h2>
+
+<!--                        <div class="columns">-->
+<!--                            <div class="column has-text-centered">-->
+<!--                                <img src="assets/images/binary_vis/binary_vis_page-0001.jpg" class="interpolation-image" alt=""-->
+<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
+<!--                                <p style="font-size: 110%">Comparative Feedback</p>-->
+<!--                            </div>-->
+<!--                            <div class="column has-text-centered">-->
+<!--                                <img src="assets/images/attribute_vis/attribute_vis_page-0001.jpg" class="interpolation-image" alt=""-->
+<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
+<!--                                <p style="font-size: 110%">Attribute Feedback</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+<!--                        <div class="columns">-->
+<!--                            <div class="column has-text-centered">-->
+<!--                                <img src="assets/images/rate_vis/rate_vis_page-0001.jpg" class="interpolation-image" alt=""-->
+<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
+<!--                                <p style="font-size: 110%">Evaluative Feedback</p>-->
+<!--                            </div>-->
+<!--                            <div class="column has-text-centered">-->
+<!--                                <img src="assets/images/keypoint_vis/keypoint_vis_page-0001.jpg" class="interpolation-image" alt=""-->
+<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
+<!--                                <p style="font-size: 110%">Keypoint Feedback</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+<!--                        <div class="columns">-->
+<!--                            <div class="column has-text-centered">-->
+<!--                                <img src="assets/images/visual_vis/visual_vis_page-0001.jpg" class="interpolation-image" alt=""-->
+<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
+<!--                                <p style="font-size: 110%">Visual Feedback</p>-->
+<!--                            </div>-->
+<!--                            <div class="column has-text-centered">-->
+
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
