--- a/index.html
+++ b/index.html
@@ -669,42 +669,20 @@ RLHF training are able to follow the abstraction metrics well.
                     <div class="row is-full-width">
                         <h2 class="title is-3"><span class="dvima">Visualization of the Platform</span></h2>
 
-<!--                        <div class="columns">-->
-<!--                            <div class="column has-text-centered">-->
-<!--                                <img src="assets/images/binary_vis/binary_vis_page-0001.jpg" class="interpolation-image" alt=""-->
-<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
-<!--                                <p style="font-size: 110%">Comparative Feedback</p>-->
-<!--                            </div>-->
-<!--                            <div class="column has-text-centered">-->
-<!--                                <img src="assets/images/attribute_vis/attribute_vis_page-0001.jpg" class="interpolation-image" alt=""-->
-<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
-<!--                                <p style="font-size: 110%">Attribute Feedback</p>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <div class="columns">-->
-<!--                            <div class="column has-text-centered">-->
-<!--                                <img src="assets/images/rate_vis/rate_vis_page-0001.jpg" class="interpolation-image" alt=""-->
-<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
-<!--                                <p style="font-size: 110%">Evaluative Feedback</p>-->
-<!--                            </div>-->
-<!--                            <div class="column has-text-centered">-->
-<!--                                <img src="assets/images/keypoint_vis/keypoint_vis_page-0001.jpg" class="interpolation-image" alt=""-->
-<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
-<!--                                <p style="font-size: 110%">Keypoint Feedback</p>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <div class="columns">-->
-<!--                            <div class="column has-text-centered">-->
-<!--                                <img src="assets/images/visual_vis/visual_vis_page-0001.jpg" class="interpolation-image" alt=""-->
-<!--                            style="display: block; width: 100%; margin-left: auto; margin-right: auto" />-->
-<!--                                <p style="font-size: 110%">Visual Feedback</p>-->
-<!--                            </div>-->
-<!--                            <div class="column has-text-centered">-->
-
-<!--                            </div>-->
-<!--                        </div>-->
+                        <div class="columns">
+                            <div class="column has-text-centered">
+                                <video poster="" id="" autoplay controls muted loop height="100%" playbackRate=2.0 style="border-radius: 5px;">
+                                    <source src="videos/uni1.mp4" type="video/mp4">
+                                </video>
+                                <p style="font-size: 110%">Annotation</p>
+                            </div>
+                            <div class="column has-text-centered">
+                                <video poster="" id="" autoplay controls muted loop height="100%" playbackRate=2.0 style="border-radius: 5px;">
+                                    <source src="videos/uni2.mp4" type="video/mp4">
+                                </video>
+                                <p style="font-size: 110%">Create Task</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
