--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
                             <div class="publication-links">
                                 <!-- TODO REPLACE ALL LINKS -->
                                 <span class="link-block">
-<!--                                    <a target="_blank" href="https://arxiv.org/abs/2310.12931"-->
-<!--                                        class="external-link button is-normal is-rounded is-dark">-->
-<!--                                        <span class="icon">-->
-<!--                                            <i class="ai ai-arxiv"></i>-->
-<!--                                        </span>-->
-<!--                                        <span>arXiv</span>-->
-<!--                                    </a>-->
+                                    <a target="_blank" href=""
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="ai ai-arxiv"></i>
+                                        </span>
+                                        <span>Arxiv</span>
+                                    </a>
                                 </span>
                                 <span class="link-block">
-                                    <a target="_blank" href="http://43.132.253.84:6002/"
+                                    <a target="_blank" href=""
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fa fa-network-wired"></i>
@@ -125,7 +125,21 @@
                                         <span class="icon">
                                             <i class="fas fa-database"></i>
                                         </span>
-                                        <span>Dataset (Coming Soon)</span>
+                                        <span>Dataset</span>
+                                    </a>
+                                    <a target="_blank" href=" "
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="fab fa-github"></i>
+                                        </span>
+                                        <span>Code</span>
+                                    </a>
+                                    <a target="_blank" href=" "
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="fas fa-robot"></i>
+                                        </span>
+                                        <span>Benchmark</span>
                                     </a>
                                 </span>
 
@@ -137,34 +151,13 @@
 <!--                                        </span>-->
 <!--                                        <span>PDF</span>-->
 <!--                                    </a>-->
-<!--                                    <a target="_blank" href="https://github.com/eureka-research/Eureka"-->
+<!--                                    <a target="_blank" href="https://huggingface.co/datasets/VIMA/VIMA-Data"-->
 <!--                                        class="external-link button is-normal is-rounded is-dark">-->
 <!--                                        <span class="icon">-->
-<!--                                            <i class="fab fa-github"></i>-->
+<!--                                            <i class="fas fa-database"></i>-->
 <!--                                        </span>-->
-<!--                                        <span>Code</span>-->
+<!--                                        <span>Dataset</span>-->
 <!--                                    </a>-->
-                                    <!-- <a target="_blank" href="https://github.com/vimalabs/VIMA#pretrained-models"
-                                        class="external-link button is-normal is-rounded is-dark">
-                                        <span class="icon">
-                                            <i class="fa fa-network-wired"></i>
-                                        </span>
-                                        <span>Models</span>
-                                    </a> -->
-                                    <!-- <a target="_blank" href="https://github.com/vimalabs/VimaBench"
-                                        class="external-link button is-normal is-rounded is-dark">
-                                        <span class="icon">
-                                            <i class="fas fa-robot"></i>
-                                        </span>
-                                        <span>Benchmark</span>
-                                    </a> -->
-                                    <!-- <a target="_blank" href="https://huggingface.co/datasets/VIMA/VIMA-Data"
-                                        class="external-link button is-normal is-rounded is-dark">
-                                        <span class="icon">
-                                            <i class="fas fa-database"></i>
-                                        </span>
-                                        <span>Dataset</span>
-                                    </a> -->
 <!--                                </span>-->
                             </div>
 
@@ -174,13 +167,13 @@
             </div>
         </div>
     </section>
-    <div class="columns is-centered has-text-centered">
-        <div class="column">
-            <p style="font-size: 125%">
-                <i>We provide a test account for the demo. <strong>Username: test Password: test</strong></i>
-            </p>
-        </div>
-    </div>
+<!--    <div class="columns is-centered has-text-centered">-->
+<!--        <div class="column">-->
+<!--            <p style="font-size: 125%">-->
+<!--                <i>We provide a test account for the demo. <strong>Username: test Password: test</strong></i>-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
 <!--    <section class="section" style="padding: 0">-->
