Update author and conference

--- a/index.html
+++ b/index.html
@@ -37,52 +37,38 @@
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title"><img src="./assets/images/logo.png" alt="Logo" style="margin-right: 1px; width: 70px;margin-top: 0px;">Uni-RLHF: Universal Platform and Benchmark Suite for Reinforcement Learning with Diverse Human Feedback</h1>
 <!--                        <h1 class="title is-1 publication-title">Uni-RLHF: Universal Platform and Benchmark Suite for Reinforcement Learning with Diverse Human Feedback</h1>-->
-                        <h2 class="title is-3 conference-authors"><a target="_blank" href="">Under Review</a></h2>
+                        <h2 class="title is-3 conference-authors"><a target="_blank" href="">ICLR 2024</a></h2>
                         <div class="is-size-5 publication-authors">
-<!--                            <span class="author-block">-->
-<!--                                <a target="_blank" href="https://www.seas.upenn.edu/~jasonyma/">-->
-<!--                                    Jason&#160;Ma</a>-->
-<!--                                    <a href="mailto:jasonyma@seas.upenn.edu">-->
-<!--                                        <span class="icon">-->
-<!--                                            <i class="fa fa-envelope"></i>-->
-<!--                                        </span>-->
-<!--                                    </a>-->
-<!--                                    <sup>1 2</sup>,-->
-<!--                                <a target="_blank"-->
-<!--                                    href="https://www.seas.upenn.edu/~wjhliang/">William&#160;Liang</a><sup>2</sup>,-->
-
-<!--                                <a target="_blank" href="https://guanzhi.me/">Guanzhi&#160;Wang</a><sup>1 3</sup>,-->
-<!--                                <a target="_blank"-->
-<!--                                    href="https://ai.stanford.edu/~dahuang/">De-An&#160;Huang</a><sup>1</sup>,-->
-<!--                                <br>-->
-<!--                                <a target="_blank"-->
-<!--                                    href="https://obastani.github.io/">Osbert&#160;Bastani</a><sup>2</sup>,-->
-<!--                                <a target="_blank"-->
-<!--                                    href="https://www.seas.upenn.edu/~dineshj/">Dinesh&#160;Jayaraman</a><sup>2</sup>,-->
-
-<!--                                <a target="_blank" href="https://www.cs.utexas.edu/~yukez/">Yuke&#160;Zhu</a><sup>1-->
-<!--                                    4</sup>,-->
-<!--                                <a target="_blank" href="https://jimfan.me/">Linxi&#160;"Jim"&#160;Fan</a>-->
-<!--                                <a href="mailto:dr.jimfan.ai@gmail.com">-->
-<!--                                    <span class="icon">-->
-<!--                                        <i class="fa fa-envelope"></i>-->
-<!--                                    </span>-->
-<!--                                </a>-->
-<!--                                <sup>1&#8225</sup>,-->
-<!--                                <a target="_blank"-->
-<!--                                    href="http://tensorlab.cms.caltech.edu/users/anima/">Anima&#160;Anandkumar</a><sup>1-->
-<!--                                    3&#8225</sup>-->
-<!--                            </span>-->
+                            <span class="author-block">
+                                <a target="_blank" href="https://yifu-yuan.github.io">
+                                    Yifu&#160;Yuan</a>
+                                <sup>1</sup>,
+                                <a target="_blank"
+                                    href="http://www.icdai.org/jianye.html">Jianye&#160;Hao</a>
+                                <sup>1&#8225</sup>
+                                <a target="_blank"
+                                    href="https://mayi1996.top/">Yi&#160;Ma</a><sup>1</sup>,
+                                <a target="_blank"
+                                    href="https://zibindong.github.io/">Zibin&#160;Dong</a><sup>1</sup>,
+                                <a target="_blank"
+                                    href="">Hebin&#160;Liang</a><sup>1</sup>,
+                                <br>
+                                <a target="_blank"
+                                    href="">Jinyi&#160;Liu</a><sup>1</sup>,
+                                <a target="_blank"
+                                    href="">Zhixin&#160;Feng</a><sup>1</sup>,
+                                <a target="_blank"
+                                    href="">Kai&#160;Zhao</a><sup>1</sup>,
+                                <a target="_blank"
+                                    href="https://yanzzzzz.github.io/">Yan&#160;Zheng</a><sup>1</sup>,
+                            </span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
-<!--                            <span class="author-block"><sup>1</sup>NVIDIA; </span>-->
-<!--                            <span class="author-block"><sup>2</sup>UPenn; </span>-->
-<!--                            <span class="author-block"><sup>3</sup>Caltech; </span>-->
-<!--                            <span class="author-block"><sup>4</sup>UT Austin;</span>-->
-<!--                            <span class="author-block"><sup>&#8225;</sup>Equal Advising </span>-->
+                            <span class="author-block"><sup>1</sup>Tianjin University; </span>
+                            <span class="author-block"><sup>&#8225;</sup>Corresponding Author</span>
                         </div>
-                        <div class="is-size-5 publication-authors">
+<!--                        <div class="is-size-5 publication-authors">-->
 
 <!--                        <span class="author-block">-->
 <!--                                    <span class="icon">-->
@@ -90,21 +76,13 @@
 <!--                                    </span>-->
 <!--                            Corresponding authors: jasonyma@seas.upenn.edu, dr.jimfan.ai@gmail.com-->
 <!--                        </span>-->
-                        </div>
-                        <!-- <div class="is-size-5 publication-authors">
-                        <span class="author-block">Work done during the first author's internship at NVIDIA</span>
-                        </div> -->
-
-                        <!-- <div class="is-size-5 publication-authors">
-                        <span class="author-block"><sup>&dagger;</sup>Equal Contribution</span>
-                        <span class="author-block"><sup>&#8225;</sup>Equal Advising </span>
-                    </div> -->
+<!--                        </div>-->
 
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <!-- TODO REPLACE ALL LINKS -->
                                 <span class="link-block">
-                                    <a target="_blank" href=""
+                                    <a target="_blank" href="https://arxiv.org/abs/2402.02423"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
@@ -120,26 +98,26 @@
                                         </span>
                                         <span>Demo</span>
                                     </a>
-                                    <a target="_blank" href=""
+                                    <a target="_blank" href="https://drive.google.com/drive/folders/1JMWyl0iAm2JJ5pOBW5M9kTOj6pJn8H3N?usp=drive_link"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-database"></i>
                                         </span>
                                         <span>Dataset</span>
                                     </a>
-                                    <a target="_blank" href=" "
+                                    <a target="_blank" href="https://github.com/pickxiguapi/Clean-Offline-RLHF"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
                                         </span>
-                                        <span>Code</span>
+                                        <span>Platform</span>
                                     </a>
-                                    <a target="_blank" href=" "
+                                    <a target="_blank" href="https://github.com/pickxiguapi/Clean-Offline-RLHF"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-robot"></i>
                                         </span>
-                                        <span>Benchmark</span>
+                                        <span>Clean Offline RLHF</span>
                                     </a>
                                 </span>
 
